# IFRS_Agent

./: .gitignore  CLAUDE.md  DB_QUALITY_REPORT.md  DB_USAGE_GUIDE.md  langgraph.json  problems.md  pyproject.toml
_quality_report/v1/: DB_QUALITY_REPORT_RESPONSE.md  run-019d2416-176b-7e30-99a5-248ace17cb7a.json
app/: agent.py  db.py  embedder.py  extract_terms.py  kiwi_user_dict.txt  multi_query.py  prompts.py  reranker.py  tokenizer.py  tools.py
app/migrations/: 001_add_tsvector.sql  002_rebuild_tsvector_kiwi.py
eval/: evaluate.py  golden_dataset.json
eval/results/: baseline.json  baseline_dict.json  baseline_kiwi.json  baseline_v2.json  baseline_v3.json  baseline_v4.json  bm25_only.json  bm25_only_dict.json  bm25_only_kiwi.json  bm25_only_v4.json  dense_only.json  dense_only_v4.json  dense_reranker_v4.json  multi_query_kiwi.json  multi_query_reranker_kiwi.json  pool50.json  pool50_v4.json  reranker_dict.json  reranker_kiwi.json  reranker_v4.json  rrf_k100.json  rrf_k100_v4.json  rrf_k20.json  rrf_k20_v4.json
search_chunks/: KIFRS1001.json  KIFRS1002.json  KIFRS1007.json  KIFRS1008.json  KIFRS1010.json  KIFRS1012.json  KIFRS1016.json  KIFRS1019.json  KIFRS1020.json  KIFRS1021.json  KIFRS1023.json  KIFRS1024.json  KIFRS1026.json  KIFRS1027.json  KIFRS1028.json  KIFRS1029.json  KIFRS1032.json  KIFRS1033.json  KIFRS1034.json  KIFRS1036.json  KIFRS1037.json  KIFRS1038.json  KIFRS1039.json  KIFRS1040.json  KIFRS1041.json  KIFRS1101.json  KIFRS1102.json  KIFRS1103.json  KIFRS1105.json  KIFRS1106.json  KIFRS1107.json  KIFRS1108.json  KIFRS1110.json  KIFRS1111.json  KIFRS1112.json  KIFRS1113.json  KIFRS1114.json  KIFRS1115.json  KIFRS1116.json  KIFRS1117.json  (+23 more)
tests/: test_evaluation.py  test_hybrid_search.py  test_multi_query.py  test_multi_standard_search.py  test_param_tuning.py  test_prompts.py  test_reranker.py  test_similarity_threshold.py  test_step2_authority.py  test_tokenizer.py  test_tsvector.py  test_user_dict.py
